cinnamon-settings-daemon (4.8.0-1~) UNRELEASED; urgency=medium

  * New upstream version 4.8.0
  * switch to meson
  * bump dh compat to 13
  * remove and don't install apport file

 -- Norbert Preining <norbert@preining.info>  Mon, 30 Nov 2020 04:30:37 +0900

cinnamon-settings-daemon (4.6.4-1) unstable; urgency=medium

  * New upstream version 4.6.4

 -- Norbert Preining <norbert@preining.info>  Thu, 25 Jun 2020 10:57:22 +0900

cinnamon-settings-daemon (4.6.3-1) experimental; urgency=medium

  * New upstream version 4.6.3

 -- Norbert Preining <norbert@preining.info>  Fri, 19 Jun 2020 19:15:14 +0900

cinnamon-settings-daemon (4.6.1-2) experimental; urgency=medium

  * Bump B-D on libcinnamon-desktop-dev to 4.6 to fix build errors

 -- Norbert Preining <norbert@preining.info>  Wed, 17 Jun 2020 22:20:35 +0900

cinnamon-settings-daemon (4.6.1-1) experimental; urgency=medium

  * New upstream release 4.6.1

 -- Norbert Preining <norbert@preining.info>  Sat, 30 May 2020 23:18:13 +0900

cinnamon-settings-daemon (4.4.0-3) unstable; urgency=medium

  [ Fabio Fantoni ]
  * Bump deps and reverse-deps to avoid partial upgrade on testing migration

 -- Norbert Preining <norbert@preining.info>  Mon, 10 Feb 2020 22:49:24 +0900

cinnamon-settings-daemon (4.4.0-2) unstable; urgency=medium

  * Upload to unstable

 -- Norbert Preining <norbert@preining.info>  Tue, 04 Feb 2020 08:40:41 +0900

cinnamon-settings-daemon (4.4.0-1) experimental; urgency=medium

  * New upstream version 4.4.0

 -- Norbert Preining <norbert@preining.info>  Sun, 19 Jan 2020 09:49:42 +0900

cinnamon-settings-daemon (4.2.2-2) unstable; urgency=medium

  * Upload to unstable

 -- Norbert Preining <norbert@preining.info>  Mon, 30 Sep 2019 22:28:12 +0900

cinnamon-settings-daemon (4.2.2-1) experimental; urgency=medium

  * New upstream release (4.2.2)
  * Add python3-tinycss to deps 
  * add myself to uploaders, release to experimental
