@@ -20,12 +20,3 @@ override_dh_makeshlibs:
 override_dh_auto_test:
 	# Disable old test suite on build time
 
-override_dh_clean:
-	# Remove autogenerated links
-	for in_file in debian/*.links.in; do \
-	    out_file=$${in_file%.in}; \
-		rm -f "$${out_file}"; \
-	done
-	dh_clean
-
-
